# Othello

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: IOthelloBoard.hpp  OthelloBoard.hpp  OthelloUtils.hpp
src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  OthelloBoard.cpp  a.out  cmake_install.cmake  main.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  OthelloBoard.test.cpp  cmake_install.cmake
